--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^5.3",
-        "illuminate/support": "^5.3",
-        "illuminate/config": "^5.3",
-        "illuminate/cache": "^5.3",
-        "illuminate/auth": "^5.3"
+        "illuminate/database": ">=5.3",
+        "illuminate/support": ">=5.3",
+        "illuminate/config": ">=5.3",
+        "illuminate/cache": ">=5.3",
+        "illuminate/auth": ">=5.3"
     },
     "autoload": {
         "psr-4": {
